ajout: pop-up dans la page d'authentification

--- a/src/pocdashboard/static/css/login.css
+++ b/src/pocdashboard/static/css/login.css
@@ -101,4 +101,8 @@ input:focus::-webkit-input-placeholder {
     display: block;
 }
 
-
+.alert{
+  margin-top: 25px !important;
+  width: 50% !important;
+  left: 25% !important; 
+}
