--- a/src/pocdashboard/templates/base.html
+++ b/src/pocdashboard/templates/base.html
@@ -19,7 +19,7 @@
             <a class="navbar-brand" href="#">
                 <img src="{% static 'logo.png' %}"  width="200" height="50">
             </a>
-            <span class="personne"> {{ user.prenom }} {{user.nom}} {{user.matricule}} </span>
+            <h1 class="personne"> {{ user.username }} </h1>
             <nav class="nav">         
                 {% if user.is_authenticated %}
             
