--- a/src/pocdashboard/templates/login.html
+++ b/src/pocdashboard/templates/login.html
@@ -2,13 +2,17 @@
 {% load static %}
 
 {% block header %}
-<link rel="stylesheet" href="{% static "css/login.css"  %}" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" 
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
         crossorigin="anonymous" 
 defer></script>
-<script src="{% static "js/login.js"  %}" defer></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+        crossorigin="anonymous" 
+defer></script>
+<script src="{% static 'js/login.js'  %}" defer></script> 
+<link rel="stylesheet" href="{% static 'css/login.css'  %}" />
 {% endblock %}
 
 {% block content %}
@@ -16,12 +20,10 @@ defer></script>
  
   {% if messages %}
   {% for message in messages %}
-    
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-      {{ message }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-  
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+     <span style="font-size: 1.3rem;"> {{ message }} </span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
   {% endfor %}
   {% endif %}
 	
