mise en place d'un form pour récupérer un fichier csv

--- a/src/pocdashboard/templates/dashboard.html
+++ b/src/pocdashboard/templates/dashboard.html
@@ -39,8 +39,10 @@
   <div class="slider"><div class="indicator"></div></div>
   <div class="content">
     <section>
-      <h2>Features</h2>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea dolorem sequi, quo tempore in eum obcaecati atque quibusdam officiis est dolorum minima deleniti ratione molestias numquam. Voluptas voluptates quibusdam cum?
+      <!-- <h2>Features</h2> -->
+      <div id="container-csv">
+        {{form}}
+      </div>
     </section>
     <section>
         <h2>Delivery Contents</h2>
