--- a/src/pocdashboard/static/css/dashboard.css
+++ b/src/pocdashboard/static/css/dashboard.css
@@ -9,7 +9,8 @@
 	 height: 100%;
 }
  body {
-	 /* background: #efefef;
+	 background: #efefef;
+	 /*
 	 color: #333;
 	 font-family: "Raleway"; */
 	 height: 100%;
