--- a/src/pocdashboard/static/css/dashboard.css
+++ b/src/pocdashboard/static/css/dashboard.css
@@ -30,7 +30,7 @@
 	 padding: 50px;
 	 padding-bottom: 80px;
 	 width: 95%;
-	 height: 80%;
+	 /* height: 80%; */
 	 box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 	 border-radius: 5px;
 	 min-width: 240px;
