--- a/src/pocdashboard/static/css/dashboard/csv/csv.css
+++ b/src/pocdashboard/static/css/dashboard/csv/csv.css
@@ -1,3 +1,5 @@
+/* oooooooooooooooooooooooooooooooooooooooooo Part Button oooooooooooooooooooooooooooooooooooooooooo */
+
 .inputfile {
     width: 0.1px;
     height: 0.1px;
@@ -22,19 +24,11 @@
     /* 10px 20px */
 }
 
-/* .no-js .inputfile + label {
-    display: none;
-} */
-
 .inputfile:focus + label,
 .inputfile.has-focus + label {
     outline: 1px dotted #000;
     outline: -webkit-focus-ring-color auto 5px;
 }
-/* 
-.inputfile + label * {
-    pointer-events: none; in case of FastClick lib use
-} */
 
 .inputfile + label svg {
     width: 1em;
@@ -47,8 +41,6 @@
     /* 4px */
 }
 
-
-/* style 1 */
 
 .inputfile-1 + label {
     color: #f1e5e6;
@@ -66,6 +58,9 @@
     padding: 15px;
     background-color: #d3394c;
     border-style: none;
+    position: relative;
+    top: -15px;
+    margin-left: 20px;
 }
 
 #send-file:hover{
@@ -78,72 +73,79 @@
     height: 2rem;
 }
 
+ /* ====================== CONTAINER ====================== */
+ 
 .container-csv{
-    background-color:#f1e5e6;
-    display: flex;
-    flex-wrap: wrap;
-    align-items:baseline;
-
+  width: 100%;
+  height: 100%;
+  /* background-color: bisque; */
+  display: flex;
+  padding: 5px;
 }
 
-.container-bSend {
-    background-color: aqua;
-    width: 30%;
-    margin-top: 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap:10px
+.container-file{
+  /* background-color:blanchedalmond; */
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 150px; */
 }
 
-.break {
-    flex-basis: 50%;
-    height: 50px;
-    width: 25px;
-    margin-top: 50px;
-  }
-
-#container-infos{
-    background-color: bisque;
-    width: 70%;
-    height: 40%;
-    padding: 20px;
+.container-button{
+  width: 40%;
+  /* background-color: aqua; */
+  min-height: 150px;
 }
 
-#container-infos p{
-    padding: 15px;
+.container-infos{
+  width: 60%;
+  /* background-color: brown;  */
 }
+
+
+/* oooooooooooooooooooooooooooooooooooooooooo Part Table oooooooooooooooooooooooooooooooooooooooooo */
 
 .row {
-left: 25%;
-position: relative;
+  margin-left:-5px;
+  margin-right:-5px;
 }
-    
+  
+.column {
+  float: left;
+  width: 30%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+th, td {
+  text-align: left;
+  padding: 16px;
+}
+
+td{
+  width: 55px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+@media screen and (max-width: 600px) {
   .column {
-    float: left;
-    width: 30%;
-    padding: 5px;
+    width: 100%;
   }
-  
-  /* Clearfix (clear floats) */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-  
-  table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    /* width: 60%; */
-    border: 1px solid #ddd;
-  }
-  
-  th, td {
-    text-align: left;
-    padding: 16px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
+}
