correction: affichage du tableau qui ne devrait pas se faire (l41-csv.html)

--- a/src/pocdashboard/templates/dashboard/section/csv.html
+++ b/src/pocdashboard/templates/dashboard/section/csv.html
@@ -38,7 +38,7 @@
    </div>
    <!-- oooooooooooooooooooooooooooooooooooooooooo Part Table oooooooooooooooooooooooooooooooooooooooooo -->
    <div class="container-infos">
-      {% if infos is None %}
+      {% if infos is not None %}
       <div class="row">
          <!-- ================================ Information ================================ -->
          <div class="column">
