--- a/src/pocdashboard/templates/dashboard/section/graphic.html
+++ b/src/pocdashboard/templates/dashboard/section/graphic.html
@@ -22,6 +22,15 @@
     <div class="container-graphic">
         <p> graphique </p>
     </div>
-</div
+</div>
 
-<script src="{% static 'js/getDataForGraphic.js' %}" type="text/javascript"></script>
+<script
+    src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+    crossorigin="anonymous">
+</script> 
+<script 
+    src="{% static 'js/getDataForGraphic.js' %}" 
+    type="text/javascript">
+</script>
+
