--- a/src/pocdashboard/templates/dashboard/section/graphic.html
+++ b/src/pocdashboard/templates/dashboard/section/graphic.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="container-graphic">
-        <p> graphique </p>
+        <canvas id="myChart"></canvas>
     </div>
 </div>
 
@@ -29,6 +29,7 @@
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
     crossorigin="anonymous">
 </script> 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script 
     src="{% static 'js/getDataForGraphic.js' %}" 
     type="text/javascript">
