--- a/src/pocdashboard/static/css/dashboard/graphic/graphic.css
+++ b/src/pocdashboard/static/css/dashboard/graphic/graphic.css
@@ -1,34 +1,51 @@
 .container-main{
     background-color: black;
-    width: 100%;
-    height: 100%;
-    display: flex;
+    margin: 5px;
+}
+
+.container-main > *{
+  margin: 5px;
 }
 
 .container-bgraph{
-    background-color: aqua;
-    width: 20%;
-    margin: 5px;
+  background-color: aqua;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+
 }
 
 .container-callgraph{
-    background-color: bisque;
-    height: 100px;
-    margin: 5px;
+  background-color: bisque;
+  
 }
 
 .container-optiongraph{
-    background-color:darkkhaki;    
-    height: 100px;
-    margin: 5px;
+    background-color:darkkhaki;  
 }
 
 .container-graphic{
     background-color:beige;
-    width: 80%;
-    margin: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.container-graphic > *{
     max-height: 600px;
+}
+
+
+.main-g{
+  background-color: orange;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.detail-g{
+  background-color: green;
+  width: 40%;
 }
