--- a/src/pocdashboard/static/css/dashboard/graphic/graphic.css
+++ b/src/pocdashboard/static/css/dashboard/graphic/graphic.css
@@ -1,5 +1,5 @@
 .container-main{
-    background-color: black;
+    /* background-color: black; */
     margin: 5px;
 }
 
@@ -8,7 +8,7 @@
 }
 
 .container-bgraph{
-  background-color: aqua;
+  /* background-color: aqua; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,16 +17,16 @@
 }
 
 .container-callgraph{
-  background-color: bisque;
+  /* background-color: bisque; */
   
 }
 
 .container-optiongraph{
-    background-color:darkkhaki;  
+    /* background-color:darkkhaki;   */
 }
 
 .container-graphic{
-    background-color:beige;
+    /* background-color:beige; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,14 +38,26 @@
 
 
 .main-g{
-  background-color: orange;
+  /* background-color: orange; */
   width: 60%;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 50px;
 }
 
 .detail-g{
-  background-color: green;
+  /* background-color: green; */
   width: 40%;
+  position:relative;
+  right: 60px
+}
+
+.callG{
+  border-radius: 30%;
+  background-color: white;
+}
+
+.callG:hover{
+  transform: scale(1.1)
 }
