simplification du code + ajout: graphique selon le mois

--- a/src/pocdashboard/templates/dashboard/dashboard.html
+++ b/src/pocdashboard/templates/dashboard/dashboard.html
@@ -4,8 +4,9 @@
 {% block header %}
 <link rel="stylesheet" href="{% static 'css/dashboard/dashboard.css'  %}" />
 <link rel="stylesheet" href="{% static 'css/dashboard/csv/csv.css'  %}" />
+<link rel="stylesheet" href="{% static 'css/dashboard/csv/modal.css'  %}" />
 <link rel="stylesheet" href="{% static 'css/dashboard/graphic/graphic.css'  %}" />
-<script src="{% static 'js/custom-file-input.js' %}" defer></script>
+<script src="{% static 'js/dashboard/csv/custom-file-input.js' %}" defer></script>
 {% endblock %}
 
 {% block content %}
@@ -51,6 +52,5 @@
     </section>
   </div>
 </div>
-
 
 {% endblock %}
