--- a/src/pocdashboard/templates/login/login.html
+++ b/src/pocdashboard/templates/login/login.html
@@ -10,7 +10,7 @@ defer></script>
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
         crossorigin="anonymous" 
 defer></script>
-<script src="{% static 'js/login.js'  %}" defer></script> 
+<script src="{% static 'js/login/login.js'  %}" defer></script> 
 <link rel="stylesheet" href="{% static 'css/login/login.css'  %}" />
 {% endblock %}
 
