--- a/src/pocdashboard/static/css/dashboard/csv/csv.css
+++ b/src/pocdashboard/static/css/dashboard/csv/csv.css
@@ -61,7 +61,7 @@
     background-color: #d3394c;
     border-style: none;
     position: relative;
-    top: -15px;
+    /* top: -15px; */
     margin-left: 20px;
 }
 
